custom.css
/* ... */
:root.is-mac {
  --ct-font-family: Overpass, "Noto Sans SC", sans-serif;
}

* {
  transition: none !important;
}

html,
body {
  line-height: var(--ct-line-height);
  font-size: var(--ct-text-size);
  font-family: var(--ls-font-family);
  overscroll-behavior-y: none;
}

html[data-theme="light"] {
  background: var(--ls-primary-background-color);
}

html[data-theme="dark"] {
  background: var(--ls-primary-background-color);
}

.cp__sidebar-main-content {
  width: 100%;
}

#app-container {
  background: var(--ct-background);
}

#main-content-container {
  margin-top: 0 !important;
}

/* bullet dropdown menu */

.bg-base-3 {
  background-color: var(--ct-menu-dropdown-background);
}

/* page/block autocomplete */

.absolute-modal {
  width: fit-content;
  min-width: 0 !important;
}

.datepicker {
  margin-top: 0;
}

/* weird vertical border on the left side of the screen */

#sidebar-nav-wrapper {
  border: none !important;
}

/* loading screen */

.cp__sidebar-main-content > .mt-20 {
  display: none;
}

/* Page file path offset fix */
#main-content-container
  > div
  > div
  > div
  > div.relative
  > div:nth-child(3)
  > div.content
  > div
  > span
  + a {
  margin-top: 2px;
}

.cp__header,
.cp__right-sidebar-topbar {
  backdrop-filter: var(--ct-topbar-backdrop);
  background-color: var(--ct-topbar-background) !important;
}

.cp__header::after,
.cp__right-sidebar-topbar::after {
  left: 0;
  right: 0;
  height: 1px;
  z-index: 1;
  position: absolute;
  top: 100%;
  background-color: rgba(0, 0, 0, 0.16);
  display: block;
  content: "";
}

/***************************************************************
************************** MAIN AREA ***************************
***************************************************************/

.cp__sidebar-main-content > div {
  padding: 1px 40px 20px 40px;
  border-radius: var(--ct-page-border-radius);
  background: var(--ct-page-background);
  border: var(--ct-sidebar-item-border);
  box-shadow: var(--ct-sidebar-item-box-shadow);
  --tw-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
    0 10px 10px -5px rgba(0, 0, 0, 0.04);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
  max-width: var(--ls-main-content-max-width);
}

/* < > buttons */

.cp__header > a.navigation {
  opacity: 0.9;
}
.cp__header > a.navigation svg {
  color: var(--ct-desktop-nav-buttons-color);
}

/* searchbar */
#search-field {
  color: var(--ct-search-field-text-color);
  max-width: 100%;
  opacity: 1;
}

#search-field:focus {
  color: var(--ct-search-field-text-color);
}

#search-field::-webkit-input-placeholder {
  opacity: 0;
  color: var(--ct-search-field-text-color);
}

#search-field:focus::-webkit-input-placeholder {
  opacity: 1;
}

#search-wrapper > div:first-child {
  opacity: 1;
}

#search-wrapper svg,
#search-wrapper svg,
#search-wrapper:focus-within svg,
#search-wrapper:hover svg {
  color: var(--ct-search-icon-color);
}

/* Page title */

h1.title {
  font-family: var(--ct-page-title-font-family);
  font-size: var(--ct-page-title-font-size);
  font-weight: var(--ct-page-title-font-weight);
  font-style: var(--ct-page-title-font-style);
  color: var(--ct-page-title-color);
  line-height: var(--ct-page-title-line-height);
  margin-top: 30px;
  text-shadow: var(--ct-page-title-text-shadow, none);
}

a.title h1.title {
  margin-top: 0;
  text-shadow: var(--ct-page-title-text-shadow, none);
}

/* ... icon */

[title="More options"] svg {
  color: var(--ct-title-3dots-icon-color);
  opacity: 1;
}

/* page properties */

.blocks-container > .pre-block .block-content > div {
  background: var(--ct-page-properties-background);
}

/* Heading */

.ls-block h2 {
  font-family: var(--ct-heading-font-family);
  font-size: var(--ct-heading-font-size);
  font-weight: var(--ct-heading-font-weight);
  font-style: var(--ct-heading-font-style);
  color: var(--ct-heading-color);
  text-shadow: var(--ct-heading-text-shadow, none);
}

/* text */

.cp__sidebar-main-content {
  color: var(--ct-page-font-color);
}

.block-content .with-bg-color {
  border-radius: 3px;
}

/* block properties */

.blocks-properties {
  background: var(--ct-block-properties-background);
  border-radius: 0.25rem;
}

/* references block */

.references-blocks .color-level {
  background: var(--ct-page-references-background);
  border: var(--ct-page-references-border);
}

/* vertical lines and bullets */

.block-children {
  border-left: var(--ct-guideline-size) var(--ct-guideline-style)
    var(--ct-guideline-color);
}

.block-children:focus-within {
  border-color: var(--ct-page-reference-color);
}

.bullet-container {
  width: 14px;
  height: 14px;
}

.bullet-container .bullet {
  width: var(--ct-bullet-size);
  height: var(--ct-bullet-size);
  background-color: var(--ct-bullet-color);
  transform: scale(1.0001);
}

.bullet-container.bullet-closed {
  background-color: var(--ct-bullet-closed-color);
}

.block-control svg {
  color: var(--ct-block-arrow-color);
}

/* blockquote */

blockquote {
  background: var(--ct-quote-background);
  border-left: var(--ct-quote-border-left);
  border-top-right-radius: 0.25rem;
  border-bottom-right-radius: 0.25rem;
  color: var(--ct-quote-font-color, var(--ct-page-font-color));
}

/* page embed */

.embed-page {
  background: var(--ct-page-embed-background);
  border-radius: 0.25rem;
}

.embed-page .embed-header .mr-3 {
  margin-right: 0;
}

.embed-page .embed-header svg path {
  fill: var(--ct-page-embed-header-color);
}

.embed-page .embed-header .page-ref {
  color: var(--ct-page-embed-header-color);
  font-size: 22px;
}

/* block embed */

.embed-block {
  background: var(--ct-block-embed-background);
  border-radius: 0.25rem;
}
/* ... */

